form contact + mailer ok

--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -23,19 +23,19 @@
 			<!--Main Slider Start-->
 			<section class="main-slider-three clearfix">
 				<div class="swiper-container thm-swiper__slider" data-swiper-options='{"slidesPerView": 1, "loop": true,
-																								                "effect": "fade",
-																								                "pagination": {
-																								                "el": "#main-slider-pagination",
-																								                "type": "bullets",
-																								                "clickable": true
-																								                },
-																								                "navigation": {
-																								                "nextEl": "#main-slider__swiper-button-next",
-																								                "prevEl": "#main-slider__swiper-button-prev"
-																								                },
-																								                "autoplay": {
-																								                "delay": 5000
-																								                }}'>
+																																																                "effect": "fade",
+																																																                "pagination": {
+																																																                "el": "#main-slider-pagination",
+																																																                "type": "bullets",
+																																																                "clickable": true
+																																																                },
+																																																                "navigation": {
+																																																                "nextEl": "#main-slider__swiper-button-next",
+																																																                "prevEl": "#main-slider__swiper-button-prev"
+																																																                },
+																																																                "autoplay": {
+																																																                "delay": 5000
+																																																                }}'>
 					<div class="swiper-wrapper">
 
 						<div class="swiper-slide">
@@ -49,7 +49,7 @@
 											<h2 class="main-slider-three__title">Bienvenue chez
 												<br>
 												Toiture Marlier</h2>
-											<p class="main-slider-three__text">Votre expert en 
+											<p class="main-slider-three__text">Votre expert en
 												<br>
 												couverture, charpente, étanchéité de toiture plate, isolation et désamiantage</p>
 											<div class="main-slider-three__btn-box">
@@ -70,9 +70,7 @@
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
-										<div class="main-slider-three__content">
-											
-										</div>
+										<div class="main-slider-three__content"></div>
 									</div>
 								</div>
 							</div>
@@ -85,9 +83,7 @@
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
-										<div class="main-slider-three__content">
-											
-										</div>
+										<div class="main-slider-three__content"></div>
 									</div>
 								</div>
 							</div>
@@ -99,9 +95,7 @@
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
-										<div class="main-slider-three__content">
-											
-										</div>
+										<div class="main-slider-three__content"></div>
 									</div>
 								</div>
 							</div>
@@ -113,9 +107,7 @@
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
-										<div class="main-slider-three__content">
-											
-										</div>
+										<div class="main-slider-three__content"></div>
 									</div>
 								</div>
 							</div>
@@ -127,9 +119,7 @@
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
-										<div class="main-slider-three__content">
-											
-										</div>
+										<div class="main-slider-three__content"></div>
 									</div>
 								</div>
 							</div>
@@ -141,9 +131,7 @@
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
-										<div class="main-slider-three__content">
-											
-										</div>
+										<div class="main-slider-three__content"></div>
 									</div>
 								</div>
 							</div>
@@ -155,9 +143,7 @@
 							<div class="container">
 								<div class="row">
 									<div class="col-xl-12">
-										<div class="main-slider-three__content">
-											
-										</div>
+										<div class="main-slider-three__content"></div>
 									</div>
 								</div>
 							</div>
@@ -187,8 +173,7 @@
 				<div class="about-three-shape-1 float-bob-x">
 					<img src="assets/images/shapes/about-three-shape-1.png" alt="">
 				</div>
-				<div class="about-three-img-3 float-bob-x">
-				</div>
+				<div class="about-three-img-3 float-bob-x"></div>
 				<div class="container">
 					<div class="row">
 						<div class="col-xl-6">
@@ -231,8 +216,8 @@
 											<p>
 												<b>Une étude technique préalable à tout démarrage des travaux :
 												</b>faisabilité,
-																																				chiffrage…L’étude est le meilleur moyen d’éviter les mauvaises surprises avant
-																																				travaux,</p>
+																																																																																				chiffrage…L’étude est le meilleur moyen d’éviter les mauvaises surprises avant
+																																																																																				travaux,</p>
 										</div>
 									</li>
 									<li>
@@ -243,7 +228,7 @@
 											<p>
 												<b>Des projets personnalisés et des idées créatives :
 												</b>conseils, inspiration, créativité…
-																																				Nous vous accompagnons dans la personnalisation de tous vos projets,</p>
+																																																																																				Nous vous accompagnons dans la personnalisation de tous vos projets,</p>
 										</div>
 									</li>
 									<li>
@@ -254,8 +239,8 @@
 											<p>
 												<b>La sécurité d’un contrat :
 												</b>le prix que nous vous annonçons est ferme et définitif, les
-																																				délais d’exécution sont convenus à l’avance et nous vous garantissons le bon
-																																				achèvement des travaux,</p>
+																																																																																				délais d’exécution sont convenus à l’avance et nous vous garantissons le bon
+																																																																																				achèvement des travaux,</p>
 										</div>
 									</li>
 									<li>
@@ -285,7 +270,7 @@
 				</div>
 			</section>
 			<!--About Three End-->
-			<!--Appointment Start-->
+			{# <!--Appointment Start-->
 			<section class="appointment">
 				<div class="container">
 					<div class="row">
@@ -300,11 +285,23 @@
 						</div>
 						<div class="col-xl-9 col-lg-8">
 							<div class="appointment__right">
-								<form action="" class="appointment__form contact-form-validated" novalidate="novalidate">
+								<!-- Affichage des messages flash -->
+								{% for message in app.flashes('success') %}
+									<div class="alert alert-success">
+										{{ message }}
+									</div>
+								{% endfor %}
+
+								{% for message in app.flashes('error') %}
+									<div class="alert alert-danger">
+										{{ message }}
+									</div>
+								{% endfor %}
+								<form action="{{ path('contact') }}" method="POST" class="appointment__form contact-form-validated" novalidate="novalidate">
 									<div class="row">
 										<div class="col-xl-6 col-lg-6 col-md-6">
 											<div class="appointment__input-box">
-												<input type="text" placeholder="Nom" name="name">
+												<input type="text" placeholder="Nom" name="name" required>
 												<div class="appointment__input-icon">
 													<i class="far fa-user"></i>
 												</div>
@@ -312,7 +309,7 @@
 										</div>
 										<div class="col-xl-6 col-lg-6 col-md-6">
 											<div class="appointment__input-box">
-												<input type="text" placeholder="Téléphone" name="Phone">
+												<input type="text" placeholder="Téléphone" name="Phone" required>
 												<div class="appointment__input-icon">
 													<i class="fas fa-phone"></i>
 												</div>
@@ -320,28 +317,29 @@
 										</div>
 										<div class="col-xl-6 col-lg-6 col-md-6">
 											<div class="appointment__input-box">
-												<input type="text" placeholder="Ville" name="Address">
+												<input type="text" placeholder="Ville" name="Address" required>
 												<div class="appointment__input-icon">
 													<i class="fas fa-map-marker-alt"></i>
 												</div>
 											</div>
 										</div>
-
-
 										<div class="col-xl-6 col-lg-6 col-md-6">
 											<div class="appointment__input-box">
 												<button type="submit" class="thm-btn appointment__btn">
-													<i class="fa fa-arrow-right"></i>Envoyer</button>
+													<i class="fa fa-arrow-right"></i>
+													Envoyer
+												</button>
 											</div>
 										</div>
 									</div>
 								</form>
 							</div>
 						</div>
+
 					</div>
 				</div>
 			</section>
-			<!--Appointment End-->
+			<!--Appointment End--> #}
 		</body>
 	</html>
 </div>
