--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -133,7 +133,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <a href="#">Contact </a>
+                                            <a href="/contact">Contact </a>
                                         </li>
                                     </ul>
                                 </div>
@@ -293,7 +293,7 @@
 										<a href="/comm">Commentaires</a>
 									</li>
 									<li>
-										<a href="/">Contact</a>
+										<a href="/contact">Contact</a>
 									</li>
 								</ul>
 							</div>
