mailer pour wip + corr .com + nom dans mail tout ok pour prod

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -162,7 +162,7 @@
                                     </div>
                                     <div class="content">
                                         <p>Send Email</p>
-                                        <h5><a href="mailto:toituremarlier@gmail.com">toituremarlier@gmail.om</a></h5>
+                                        <h5><a href="mailto:toituremarlier@gmail.com">toituremarlier@gmail.com</a></h5>
                                     </div>
                                 </li>
                                 <li>
