--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,15 +6,19 @@
 
 		{% block title %}
 			<title>
-				Toiture Marlier
+				Toiture Marlier expert en Toiture depuis 2017
 			</title>
 		{% endblock %}
 
-			<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png"/>
-			<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png"/>
-			<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png"/>
+			<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/Marlier4WhiteApple.png"/>
+			<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/Marlier4WhiteFavicon.png"/>
+			<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/Marlier4WhiteFav16.png"/>
 			<link rel="manifest" href="/assets/images/favicons/site.webmanifest"/>
-			<meta name="description" content="Roofsie HTML 5 Template "/>
+			<meta name="description" content="Toiture Marlier votre expert en couverture, charpente, étanchéité de toiture plate, isolation et désamiantage."/>
+
+			<link rel="alternate" hreflang="fr-BE" href="https://www.toiture-marlier.be/" />
+			<link rel="canonical" href="https://www.toiture-marlier.be/" />
+
 
 			<link rel="preconnect" href="https://fonts.googleapis.com">
 
