--- a/templates/admin/account/login.html.twig
+++ b/templates/admin/account/login.html.twig
@@ -9,11 +9,11 @@
 		</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 		{% block favicons %}
-			<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png"/>
-			<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png"/>
-			<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png"/>
+			<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/Marlier4WhiteApple.png"/>
+			<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/Marlier4WhiteFavicon.png"/>
+			<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/Marlier4WhiteFav16.png"/>
 			<link rel="manifest" href="/assets/images/favicons/site.webmanifest"/>
-			<meta name="description" content="/Roofsie HTML 5 Template "/>
+			<meta name="description" content="Toiture Marlier expert toiturié depuis 2017"/>
 		{% endblock %}
 		{# {{ render_esi(path('ch_cookie_consent.show')) }}
 		    {{ render_esi(path('ch_cookie_consent.show_if_cookie_consent_not_set')) }} #}
