--- a/templates/admin_photo/comm.html.twig
+++ b/templates/admin_photo/comm.html.twig
@@ -7,11 +7,11 @@
 	</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 	{% block favicons %}
-		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png"/>
-		<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png"/>
-		<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png"/>
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/Marlier4WhiteApple.png"/>
+		<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/Marlier4WhiteFavicon.png"/>
+		<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/Marlier4WhiteFav16.png"/>
 		<link rel="manifest" href="/assets/images/favicons/site.webmanifest"/>
-		<meta name="description" content="/Roofsie HTML 5 Template "/>
+		<meta name="description" content="Toiture Marlier expert toiturié depuis 2017"/>
 	{% endblock %}
 
 	{{ encore_entry_link_tags('app') }}
@@ -21,8 +21,31 @@
 
 {% block body %}
 
+	<!-- Navigation Bar -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">Toiture Marlier Admin</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_admin_photo') }}">Gestion des Chantiers</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_admin_photo_new') }}">Ajouter un Chantier</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_admin_comm') }}">Commentaires</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
 	<div class="container">
-		<h1 class="my-5">Gestion des chantiers</h1>
+		<h1 class="my-5">Gestion des commentaires</h1>
 		<div class="table-responsive">
 			<table class="table table-hover">
 				<thead>
@@ -31,8 +54,8 @@
 						<th>Nom</th>
 						<th>Prénom</th>
 						<th>Ville</th>
-						<th>Note</th>
 						<th>Commentaire</th>
+						<th>Note</th>
 						<th>visibilité</th>
 						<th class="text-center">Action</th>
 					</tr>
