--- a/templates/admin_photo/edit.html.twig
+++ b/templates/admin_photo/edit.html.twig
@@ -6,11 +6,11 @@
 		</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 		{% block favicons %}
-			<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png"/>
-			<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png"/>
-			<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png"/>
+			<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/Marlier4WhiteApple.png"/>
+			<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/Marlier4WhiteFavicon.png"/>
+			<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/Marlier4WhiteFav16.png"/>
 			<link rel="manifest" href="/assets/images/favicons/site.webmanifest"/>
-			<meta name="description" content="/Roofsie HTML 5 Template "/>
+			<meta name="description" content="Toiture Marlier expert toiturié depuis 2017"/>
 		{% endblock %}
 
 		{{ encore_entry_link_tags('app') }}
@@ -48,7 +48,7 @@
         {{ form_errors(form.image) }}
     </div>
     <div class="mb-3">
-        {{ form_label(form.imageLeft, 'imageLeft', {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_label(form.imageLeft, 'image Gauche', {'label_attr': {'class': 'form-label'}}) }}
 
         {# Afficher l'image existante si elle existe #}
         {% if chantier.imageLeft %}
@@ -60,7 +60,7 @@
         {{ form_errors(form.imageLeft) }}
     </div>
     <div class="mb-3">
-        {{ form_label(form.imageRight, 'Image', {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_label(form.imageRight, 'Image Droite', {'label_attr': {'class': 'form-label'}}) }}
 
         {# Afficher l'image existante si elle existe #}
         {% if chantier.imageRight %}
