--- a/templates/admin_photo/new.html.twig
+++ b/templates/admin_photo/new.html.twig
@@ -1,58 +1,83 @@
 <head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>
-			{% block title %}Toiture Marlier Admin{% endblock %}
-		</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-		{% block favicons %}
-			<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png"/>
-			<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png"/>
-			<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png"/>
-			<link rel="manifest" href="/assets/images/favicons/site.webmanifest"/>
-			<meta name="description" content="/Roofsie HTML 5 Template "/>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>
+		{% block title %}Toiture Marlier Admin
 		{% endblock %}
+	</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+	{% block favicons %}
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/faviconsMarlier4WhiteApple.png"/>
+		<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/Marlier4WhiteFavicon.png"/>
+		<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/Marlier4WhiteFav16.png"/>
+		<link rel="manifest" href="/assets/images/favicons/site.webmanifest"/>
+		<meta name="description" content="Toiture Marlier expert toiturié depuis 2017"/>
+	{% endblock %}
 
-		{{ encore_entry_link_tags('app') }}
-		{% block stylesheets %}{% endblock %}
-		{{ encore_entry_link_tags('app') }}
-	</head>
+	{{ encore_entry_link_tags('app') }}
+	{% block stylesheets %}{% endblock %}
+	{{ encore_entry_link_tags('app') }}
+</head>
 
 {% block body %}
-<div class="container mt-5">
-    <h1>Ajouter un Chantier</h1>
-    {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
 
-    <div class="mb-3">
-        {{ form_label(form.titre, 'Titre', {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.titre, {'attr': {'class': 'form-control'}}) }}
-        {{ form_errors(form.titre) }}
-    </div>
+	<!-- Navigation Bar -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">Toiture Marlier Admin</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_admin_photo') }}">Gestion des Chantiers</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_admin_photo_new') }}">Ajouter un Chantier</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_admin_comm') }}">Commentaires</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
-    <div class="mb-3">
-        {{ form_label(form.description, 'Description', {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
-        {{ form_errors(form.description) }}
-    </div>
+	<div class="container mt-5">
+		<h1>Ajouter un Chantier</h1>
+		{{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
 
-    <div class="mb-3">
-        {{ form_label(form.image, 'Image', {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.image, {'attr': {'class': 'form-control'}}) }}
-        {{ form_errors(form.image) }}
-    </div>
-    <div class="mb-3">
-        {{ form_label(form.imageLeft, 'Image', {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.imageLeft, {'attr': {'class': 'form-control'}}) }}
-        {{ form_errors(form.imageLeft) }}
-    </div>
-    <div class="mb-3">
-        {{ form_label(form.imageRight, 'Image', {'label_attr': {'class': 'form-label'}}) }}
-        {{ form_widget(form.imageRight, {'attr': {'class': 'form-control'}}) }}
-        {{ form_errors(form.imageRight) }}
-    </div>
+		<div class="mb-3">
+			{{ form_label(form.titre, 'Titre', {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.titre, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.titre) }}
+		</div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
+		<div class="mb-3">
+			{{ form_label(form.description, 'Description', {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.description, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.description) }}
+		</div>
 
-    {{ form_end(form) }}
-</div>
+		<div class="mb-3">
+			{{ form_label(form.image, 'Image', {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.image, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.image) }}
+		</div>
+		<div class="mb-3">
+			{{ form_label(form.imageLeft, 'Image Gauche ( Optionnel )', {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.imageLeft, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.imageLeft) }}
+		</div>
+		<div class="mb-3">
+			{{ form_label(form.imageRight, 'Image Droite ( Optionnel )', {'label_attr': {'class': 'form-label'}}) }}
+			{{ form_widget(form.imageRight, {'attr': {'class': 'form-control'}}) }}
+			{{ form_errors(form.imageRight) }}
+		</div>
+
+		<button type="submit" class="btn btn-primary">Save</button>
+
+		{{ form_end(form) }}
+	</div>
 {% endblock %}
