--- a/templates/charpente/index.html.twig
+++ b/templates/charpente/index.html.twig
@@ -49,7 +49,7 @@
 				<div class="col-xl-8 col-lg-7">
 					<div class="service-details__right">
 						<div class="service-details__img">
-							<img src="assets/images/backgrounds/charpente2.jpg" alt="">
+							<img src="assets/images/backgrounds/charpente2.jpg" alt="vue plongeante d'une charpente">
 							<div class="service-details__icon">
 								<span class="icon-joist"></span>
 							</div>
@@ -67,7 +67,7 @@
 								<div class="col-xl-6">
 									<div class="service-details__benefits-single">
 										<div class="service-details__benefits-img">
-											<img src="assets/images/backgrounds/charpente1.jpg" style="height: 277.5px; width: 370px;" alt="">
+											<img src="assets/images/backgrounds/charpente1.jpg" style="height: 277.5px; width: 370px;" alt="image d'une charpente externe">
 										</div>
 
 									</div>
@@ -75,7 +75,7 @@
 								<div class="col-xl-6">
 									<div class="service-details__benefits-single">
 										<div class="service-details__benefits-img">
-											<img src="assets/images/services/couverture2.jpg" style="height: 277.5px; width: 370px;" alt="">
+											<img src="assets/images/services/couverture2.jpg" style="height: 277.5px; width: 370px;" alt="vue plongeante sur une charpente">
 										</div>
 
 									</div>
