--- a/templates/couverture/index.html.twig
+++ b/templates/couverture/index.html.twig
@@ -43,7 +43,7 @@
 				<div class="col-xl-8 col-lg-7">
 					<div class="service-details__right">
 						<div class="service-details__img">
-							<img src="assets/images/services/couvertureCover.jpg" alt="">
+							<img src="assets/images/services/couvertureCover.jpg" alt="photo d'une maison avec couverture de toit noir">
 							<div class="service-details__icon">
 								<span class="icon-joist"></span>
 							</div>
@@ -62,7 +62,7 @@
 								<div class="col-xl-6">
 									<div class="service-details__benefits-single">
 										<div class="service-details__benefits-img">
-											<img src="assets/images/services/couvertureLeft.jpg" style="height: 277.5px; width: 370px;" alt="">
+											<img src="assets/images/services/couvertureLeft.jpg" style="height: 277.5px; width: 370px;" alt="photo d'une couverture de toit rouge">
 										</div>
 										
 									</div>
@@ -70,7 +70,7 @@
 								<div class="col-xl-6">
 									<div class="service-details__benefits-single">
 										<div class="service-details__benefits-img">
-											<img src="assets/images/services/couvertureRight.jpg" style="height: 277.5px; width: 370px;" alt="">
+											<img src="assets/images/services/couvertureRight.jpg" style="height: 277.5px; width: 370px;" alt="photo d'une maison blanche avec couverture de toit noir">
 										</div>
 										
 									</div>
